# Bruh-Windows-Project

./: .gitignore  404.html  Cargo.toml  README.md  TODO.md  index.html  link.sh  post-to-db.sh
backend/: Cargo.toml  Notes.md  dist  link.sh  static.json
backend/files/: index.html  test.html
backend/src/: main.rs
backend/src/api/: mod.rs  mongo.rs  task.rs
backend/src/api/comment/: mod.rs  post_comment.rs  structs.rs  view_comments.rs
backend/src/api/post/: delete_post.rs  like_post.rs  mod.rs  structs.rs  upload_post.rs  view_post.rs
backend/src/api/user/: generate_user.rs  get_user.rs  mod.rs
backend/src/database/: mongo.rs
backend/src/routing/: routes.rs
backend/src/static/: 404.html  index.html  test.html
common/: Cargo.toml
common/files/: index.html  test.html
common/src/api/: mod.rs  task.rs
common/src/mongodb/: structs.rs
common/src/routing/: static.json
common/src/static/: index.html
common/src/static/assets/css/: styles.css
files/: 404.html  index.html  not_found.html  test.html
files/css/: style.css
files/test3/: index.html
files/test3/css-stuff/: style.css
files/yuri/: layout2.html  main.html  tags.html
files/yuri/css/: css.css  cssL2.css
frontend/: Cargo.toml  README.md  Trunk.toml  assets  index.html  post_build.sh
frontend/.assets/: posts
frontend/assets/css/: style.css  style_two.css  tags.css
frontend/src/: about.rs  console_log.rs  gallery.rs  home.rs  main.rs  not_found.rs  routes.rs  session.rs  tags.rs
frontend/src/components/: commentsupload.rs  container.rs  fileupload.rs  header.rs  mod.rs  posts.rs  scrolltop.rs  sidebar.rs  sortbuttons.rs  template.rs
frontend/src/pages/: about.rs  gallery.rs  home.rs  mod.rs  not_found.rs  post.rs  tags.rs
frontend/template/: index.html  layout2.html  main.html
frontend/template/css/: cssL2.css  style_two.css  tags.css
markdown/: index.html  layout2.html  tags.html
markdown/css/: css.css  style.css
markdown/yuri/: main.html
markdown/yuri/css/: tags.css
src/: TODO.md  lib.rs  main.rs
src/api/: mongo.rs  task.rs
src/frontend/: index.html
src/routing/: routes.rs
src/static/: index.html
