[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.0.1"
actix-files = "^0.6.0"
actix = "^0.13.0"
actix-rt = "^2.7.0"
derive_more = "^0.99.17"
env_logger = "^0.9.0"
log = "^0.4.17"
serde = { version = "^1.0.137", features = ["derive"] }
