[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.0.1", features = ["openssl"] }
actix-files = "^0.6.0"
actix = "^0.13.0"
actix-rt = "^2.7.0"
ahash = "0.7.6"
anyhow = "1.0.57"
compact_str = "0.4.0"
dashmap = "^5.3.4"
derive_more = "^0.99.17"
env_logger = "^0.9.0"
log = "^0.4.17"
mongodb = { version = "^2.2.2", features = ["tokio-runtime"] }
once_cell = { version = "1.12.0", features = ["parking_lot"] }
openssl = "^0.10.40"
parking_lot = "0.12.1"
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = "1.0.81"
futures = "^0"
