[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
bson = "^2.3"
compact_str = "^0.4"
derive_more = "^0.99"
env_logger = "^0.9"
log = "^0.4"
image = "^0.24"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
