[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
common = { path = "../common" }
gloo-utils = "0.1.4"
reqwasm = "^0.5.0"
serde = { version = "^1.0", features = ["derive"] }
yew = "^0.19"
yew-router = "^0.16"
wasm-bindgen = "^0.2.81"
wasm-bindgen-futures = "^0.4.31"
web-sys = "^0.3.58"
