[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
derive_more = "^0.99.17"
futures = "0.3.21"
gloo-file = "0.2.3"
gloo-utils = "0.1.4"
image = "0.24.3"
js-sys = "0.3.59"
reqwasm = "^0.5.0"
reqwest = { version = "^0.11.11", features = ["multipart"] }
serde = { version = "^1.0", features = ["derive"] }
wasm-bindgen = "^0.2.81"
wasm-bindgen-futures = "^0.4.31"
web-sys = { version = "^0.3.59", features = ["Document", "HtmlCollection", "File", "DragEvent", "DataTransfer", "FormData", "HtmlFormElement", "HtmlElement"] }
yew = "^0.19"
yew-router = "^0.16"

common = { path = "../common" }
